# blackmagic-design-dll

./: BuildWin.bat  CMakeLists.txt  Program.cs  README.md
include/: BMDSwitcherAPI.idl
